# cli_weather_api

./: Cargo.toml
src/: main.rs
